# miyo-firmware

./: .codespellrc  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: sync-labels.yml
include/driver/: IT8951.h  IT8951_IO.h
include/driver/IT8951/: IT8951.h  IT8951_Const.h  IT8951_IO.h
include/hal++/: Delay.h  DigitalInPin.hpp  DigitalInPin.ipp  DigitalOutPin.h  DigitalOutPin.hpp  DigitalOutPin.ipp  SPI.hpp  SPI.ipp  UART.h  UART.hpp  UART.ipp
include/hal++/interface/: Delay.h  DigitalInPin.h  DigitalOutPin.h  SPI.h  UART.h
include/logging/: LogDeviceUart.h  LoggerBase.hpp  LoggerBase.ipp  LoggerUart.h
include/logging/interface/: LogDeviceInterface.h
src/: main.c  main.cpp  stm32l4s5i_iot01.c  stm32l4xx_hal_msp.cpp  stm32l4xx_it.cpp  syscalls.cpp  sysmem.cpp  system_stm32l4xx.cpp
src/driver/: IT8951.cpp  IT8951_IO.cpp
src/driver/IT8951/: IT8951.cpp  IT8951_IO.cpp
src/hal++/: Delay.cpp  DigitalOutPin.cpp  UART.cpp
tools/openocd/: openocd.cfg
